// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Page data access Get endpoint 1`] = `"wp/v2/pages"`;

exports[`Test Page data access Load a page 1`] = `"UGFnZToxMw=="`;

exports[`Test Page data access Load a page 2`] = `
Page {
  "id": 13,
}
`;

exports[`Test Page data access Load a page by slug 1`] = `
Page {
  "slug": "go-to-this",
}
`;
